# plugtest

./: README.md  test_plugins.sh
amber_add/: pyproject.toml
amber_add/src/amber_add/: __init__.py
amber_core/: pyproject.toml
amber_core/src/amber_core/: __init__.py
amber_mult/: pyproject.toml
amber_mult/src/amber_mult/: __init__.py
